--- a/index.html
+++ b/index.html
@@ -12,5 +12,9 @@
     <p>This is a sample sentence with <strong>bold</strong>, <em>italic</em>, and <u>underlined</u> text. We can also use some other formatting tags like <sub>subscript</sub> and <sup>superscript</sup>.</p>
     <p>This is an example of an <a href="https://www.fit.edu/business/connect-with-us/">anchor link</a> within a paragraph.</p>
     <p>Let's add an image to our page:<br><img src="https://images.theconversation.com/files/181590/original/file-20170809-32183-q3qxf2.jpg?ixlib=rb-1.1.0&q=45&auto=format&w=926&fit=clip" alt="Sample Image"></p>
+
+    <h2>New Additions</h2>
+    <h3>This aspect reflects the modified version</h3>
+    <p>I am adding an additional paragraph</p>
 </body>
 </html>
